// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 1`] = `
"<div class=\\"session\\"><div class=\\"session-container\\"><div class=\\"session-header\\"> <a><i class=\\"material-icons session-back\\">arrow_back</i></a> <h2 class=\\"session-title\\">
        Use my Ledger Nano
      </h2> <p class=\\"session-paragraph\\"></p> <a><i class=\\"material-icons session-close\\">close</i></a></div> <!----> <div><div class=\\"session-main\\"><div class=\\"tm-hardware-state\\"><div class=\\"tm-hardware-state-content\\"><!----> <div class=\\"tm-hardware-state__label\\">
            Please plug in your Ledger&nbsp;Nano&nbsp;S and open the Cosmos
            app
           <!----> <!----></div></div> <img src=\\"~assets/images/loader.svg\\" style=\\"display: none;\\"></div></div> <div class=\\"session-footer\\"><p class=\\"ledger-install\\">
          If you don't have a Ledger Nano, you can
          <a href=\\"\\" target=\\"_blank\\" rel=\\"noopener norefferer\\">buy one here</a>.
        </p> <button class=\\"tm-btn\\"><span class=\\"tm-btn__container\\"><!----><span class=\\"tm-btn__value\\">Sign In</span></span></button></div></div></div></div>"
`;

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 2`] = `
"<div class=\\"session\\"><div class=\\"session-container\\"><div class=\\"session-header\\"> <a><i class=\\"material-icons session-back\\">arrow_back</i></a> <h2 class=\\"session-title\\">
        Use my Ledger Nano
      </h2> <p class=\\"session-paragraph\\"></p> <a><i class=\\"material-icons session-close\\">close</i></a></div> <!----> <div><div class=\\"session-main\\"><div class=\\"tm-hardware-state\\"><div class=\\"tm-hardware-state-content\\"><!----> <div class=\\"tm-hardware-state__label\\">
            Please plug in your Ledger&nbsp;Nano&nbsp;S and open the Cosmos
            app
           <!----> <!----></div></div> <img src=\\"~assets/images/loader.svg\\" style=\\"\\"></div></div> <div class=\\"session-footer\\"><p class=\\"ledger-install\\">
          If you don't have a Ledger Nano, you can
          <a href=\\"\\" target=\\"_blank\\" rel=\\"noopener norefferer\\">buy one here</a>.
        </p> <button class=\\"tm-btn\\" disabled=\\"disabled\\"><span class=\\"tm-btn__container\\"><!----><span class=\\"tm-btn__value\\">Waiting for Ledger</span></span></button></div></div></div></div>"
`;

exports[`TmSessionHardware should show a state indicator for different states of the hardware connection 3`] = `
"<div class=\\"session\\"><div class=\\"session-container\\"><div class=\\"session-header\\"> <a><i class=\\"material-icons session-back\\">arrow_back</i></a> <h2 class=\\"session-title\\">
        Use my Ledger Nano
      </h2> <p class=\\"session-paragraph\\"></p> <a><i class=\\"material-icons session-close\\">close</i></a></div> <!----> <div><div class=\\"session-main\\"><div class=\\"tm-hardware-state\\"><div class=\\"tm-hardware-state-content\\"><!----> <div class=\\"tm-hardware-state__label\\"><!----> 
            Sign in with the address
            <span class=\\"address\\"></span>.<br>
            Please confirm on your Ledger.
           <!----></div></div> <img src=\\"~assets/images/loader.svg\\" style=\\"\\"></div></div> <div class=\\"session-footer\\"><p class=\\"ledger-install\\">
          If you don't have a Ledger Nano, you can
          <a href=\\"\\" target=\\"_blank\\" rel=\\"noopener norefferer\\">buy one here</a>.
        </p> <button class=\\"tm-btn\\" disabled=\\"disabled\\"><span class=\\"tm-btn__container\\"><!----><span class=\\"tm-btn__value\\">Confirming Address</span></span></button></div></div></div></div>"
`;

exports[`TmSessionHardware shows the ledger conection view when there're errors 1`] = `
<div
  class="session"
>
  <div
    class="session-container"
  >
    <div
      class="session-header"
    >
       
      <a>
        <i
          class="material-icons session-back"
        >
          arrow_back
        </i>
      </a>
       
      <h2
        class="session-title"
      >
        
        Use my Ledger Nano
      
      </h2>
       
      <p
        class="session-paragraph"
      />
       
      <a>
        <i
          class="material-icons session-close"
        >
          close
        </i>
      </a>
    </div>
     
    <!---->
     
    <div>
      <div
        class="session-main"
      >
        <div
          class="tm-hardware-state"
        >
          <div
            class="tm-hardware-state-content"
          >
            <!---->
             
            <div
              class="tm-hardware-state__label"
            >
              
            Please plug in your Ledger Nano S and open the Cosmos
            app
           
              <!---->
               
              <p
                class="error-message"
              >
                
            No Ledger found
          
              </p>
            </div>
          </div>
           
          <img
            src="~assets/images/loader.svg"
            style="display: none;"
          />
        </div>
      </div>
       
      <div
        class="session-footer"
      >
        <p
          class="ledger-install"
        >
          
          If you don't have a Ledger Nano, you can
          
          <a
            href=""
            rel="noopener norefferer"
            target="_blank"
          >
            buy one here
          </a>
          .
        
        </p>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Sign In
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`TmSessionHardware shows the ledger conection view with no errors 1`] = `
<div
  class="session"
>
  <div
    class="session-container"
  >
    <div
      class="session-header"
    >
       
      <a>
        <i
          class="material-icons session-back"
        >
          arrow_back
        </i>
      </a>
       
      <h2
        class="session-title"
      >
        
        Use my Ledger Nano
      
      </h2>
       
      <p
        class="session-paragraph"
      />
       
      <a>
        <i
          class="material-icons session-close"
        >
          close
        </i>
      </a>
    </div>
     
    <!---->
     
    <div>
      <div
        class="session-main"
      >
        <div
          class="tm-hardware-state"
        >
          <div
            class="tm-hardware-state-content"
          >
            <!---->
             
            <div
              class="tm-hardware-state__label"
            >
              
            Please plug in your Ledger Nano S and open the Cosmos
            app
           
              <!---->
               
              <!---->
            </div>
          </div>
           
          <img
            src="~assets/images/loader.svg"
            style="display: none;"
          />
        </div>
      </div>
       
      <div
        class="session-footer"
      >
        <p
          class="ledger-install"
        >
          
          If you don't have a Ledger Nano, you can
          
          <a
            href=""
            rel="noopener norefferer"
            target="_blank"
          >
            buy one here
          </a>
          .
        
        </p>
         
        <button
          class="tm-btn"
        >
          <span
            class="tm-btn__container"
          >
            <!---->
            <span
              class="tm-btn__value"
            >
              Sign In
            </span>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
